--- a/pom.xml
+++ b/pom.xml
@@ -8,10 +8,23 @@
     <artifactId>DemoWPPlugin</artifactId>
     <version>1.0.0-SNAPSHOT</version>
 
+    <repositories>
+        <repository>
+            <id>oss.sonatype.org-snapshot</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
+
     <parent>
         <groupId>org.pepsoft.worldpainter</groupId>
         <artifactId>PluginParent</artifactId>
-        <version>1.9.0</version>
+        <version>1.10.0-SNAPSHOT</version>
     </parent>
 
     <properties>
@@ -51,7 +64,7 @@
                     <groupId>org.pepsoft.worldpainter</groupId>
                     <artifactId>WPGUI</artifactId>
                     <!-- Update this to the version of WorldPainter you wish to test with: -->
-                    <version>2.21.1</version>
+                    <version>2.22.2-SNAPSHOT</version>
                     <scope>compile</scope>
                 </dependency>
             </dependencies>
