--- a/pom.xml
+++ b/pom.xml
@@ -57,30 +57,40 @@
     </build>
 
     <dependencies>
-        <!-- JUnit 5 -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
-            <version>5.8.2</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-engine</artifactId>
-            <version>5.8.2</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>RELEASE</version>
+            <version>5.9.1</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
 
     <profiles>
+        <profile>
+            <id>debug-tests</id>
+            <properties>
+                <maven.surefire.debug>true</maven.surefire.debug>
+            </properties>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>3.5.0</version>
+                        <configuration>
+                            <forkCount>0</forkCount>
+                            <argLine>
+                                -agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=*:5005
+                            </argLine>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
         <!-- Enable this profile and execute the test phase in order to run your plugin with WorldPainter. -->
         <profile>
+
             <id>testWithWorldPainter</id>
             <dependencies>
                 <dependency>
@@ -111,7 +121,8 @@
                                 <argument>-classpath</argument>
                                 <classpath/>
                                 <!-- Uncomment this to enable debugging. Change suspend=n to suspend=y if you want to debug plugin loading or initialisation: -->
-                                <argument>-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5005</argument>
+                                <argument>-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5005
+                                </argument>
                                 <argLine>-ea</argLine> <!-- Enable assertions -->
                                 <!-- These exports are needed from Java 9+ to make the JIDE GUI framework work: -->
                                 <argument>--add-exports</argument>
