--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
     <parent>
         <groupId>org.pepsoft.worldpainter</groupId>
         <artifactId>PluginParent</artifactId>
-        <version>1.10.0-SNAPSHOT</version>
+        <version>1.9.0</version>
     </parent>
 
     <properties>
@@ -54,6 +54,16 @@
                 <filtering>false</filtering>
             </resource>
         </resources>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>11</source>
+                    <target>11</target>
+                </configuration>
+            </plugin>
+        </plugins>
     </build>
 
     <dependencies>
@@ -97,7 +107,7 @@
                     <groupId>org.pepsoft.worldpainter</groupId>
                     <artifactId>WPGUI</artifactId>
                     <!-- Update this to the version of WorldPainter you wish to test with: -->
-                    <version>2.22.2-SNAPSHOT</version>
+                    <version>2.21.1</version>
                     <scope>compile</scope>
                 </dependency>
             </dependencies>
@@ -123,7 +133,7 @@
                                 <!-- Uncomment this to enable debugging. Change suspend=n to suspend=y if you want to debug plugin loading or initialisation: -->
                                 <argument>-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5005
                                 </argument>
-                                <argLine>-ea</argLine> <!-- Enable assertions -->
+                                <argLine>-ea</argLine>
                                 <!-- These exports are needed from Java 9+ to make the JIDE GUI framework work: -->
                                 <argument>--add-exports</argument>
                                 <argument>java.desktop/com.sun.java.swing.plaf.windows=ALL-UNNAMED</argument>
