tweak "run downhill" and change value of INHERIT_VALUE so it doesnt interfere with 2d map positions being -1

--- a/pom.xml
+++ b/pom.xml
@@ -109,7 +109,7 @@
                                 <argument>-classpath</argument>
                                 <classpath/>
                                 <!-- Uncomment this to enable debugging. Change suspend=n to suspend=y if you want to debug plugin loading or initialisation: -->
-                                <argument>-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5005
+                                <argument>-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=*:5005
                                 </argument>
                                 <argLine>-ea</argLine>
                                 <!-- These exports are needed from Java 9+ to make the JIDE GUI framework work: -->
