--- a/src/main/resources/org.ironsight.wpplugin.expandLayerTool.properties
+++ b/src/main/resources/org.ironsight.wpplugin.expandLayerTool.properties
@@ -1,3 +1,3 @@
 # You must change the name of this file, and all places where the filename is used. Otherwise, it will clash with other
 # plugins using the same name.
-orig.ironsight.wpplugin.rivertool.version=${project.version}
+orig.ironsight.wpplugin.expandLayerTool.version=${project.version}
