--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.pepsoft.worldpainter</groupId>
+            <artifactId>WPCore</artifactId>
+            <version>2.21.1</version>
+        </dependency>
+        <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
             <version>5.9.1</version>
@@ -81,6 +86,8 @@
 
             <id>testWithWorldPainter</id>
             <dependencies>
+
+
                 <dependency>
                     <groupId>org.pepsoft.worldpainter</groupId>
                     <artifactId>WPGUI</artifactId>
