--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.15.0</version>  <!-- Use the latest version -->
+        </dependency>
+        <dependency>
             <groupId>org.pepsoft.worldpainter</groupId>
             <artifactId>WPCore</artifactId>
             <version>2.21.1</version>
