--- a/pom.xml
+++ b/pom.xml
@@ -124,6 +124,7 @@
                                 <argument>-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=*:5005
                                 </argument>
                                 <argLine>-ea</argLine>
+                                <argLine>-Dsun.awt.disablegrab=true</argLine>
                                 <!-- These exports are needed from Java 9+ to make the JIDE GUI framework work: -->
                                 <argument>--add-exports</argument>
                                 <argument>java.desktop/com.sun.java.swing.plaf.windows=ALL-UNNAMED</argument>
