--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>org.ironsight.wpplugin.macroMachine</groupId>
     <artifactId>Macro-Machine-Plugin</artifactId>
-    <version>0.0.1.2</version>
+    <version>0.0.2.exp</version>
 
     <repositories>
         <repository>
