--- a/.github/workflows/merge-release.yml
+++ b/.github/workflows/merge-release.yml
@@ -3,7 +3,7 @@ name: Check pom.xml version and merge
 on:
   push:
     branches:
-      - tool/MacroMachine/main
+      - master
 
 jobs:
   check-and-merge:
@@ -32,15 +32,15 @@ jobs:
             echo "version_changed=false" >> $GITHUB_OUTPUT
           fi
 
-      - name: Merge main into release
+      - name: Merge master into release
         if: steps.check-pom.outputs.version_changed == 'true'
         run: |
           git config --global user.name 'GitHub Action'
           git config --global user.email 'action@github.com'
-          git checkout master
-          git merge tool/MacroMachine/main -m "release macroMachine version: ${{ steps.check-pom.outputs.current_version }}"
-          git push origin master
+          git checkout release
+          git merge master -m "release macroMachine version: ${{ steps.check-pom.outputs.current_version }}"
+          git push origin release
           
-          git checkout tool/MacroMachine/main
+          git checkout master
           git tag macroMachine-release-${{ steps.check-pom.outputs.current_version }}
           git push --tag
