--- a/.github/workflows/merge-release.yml
+++ b/.github/workflows/merge-release.yml
@@ -38,7 +38,7 @@ jobs:
           git config --global user.name 'GitHub Action'
           git config --global user.email 'action@github.com'
           git checkout release
-          git merge master -m "release macroMachine version: ${{ steps.check-pom.outputs.current_version }}"
+          git merge master --no-ff -m "release macroMachine version: ${{ steps.check-pom.outputs.current_version }}"
           git push origin release
           
           git checkout master
