--- a/pom.xml
+++ b/pom.xml
@@ -73,7 +73,7 @@
         <dependency>
             <groupId>org.pepsoft.worldpainter</groupId>
             <artifactId>WPCore</artifactId>
-            <version>2.21.1</version>
+            <version>2.22.2-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
@@ -95,7 +95,7 @@
                     <groupId>org.pepsoft.worldpainter</groupId>
                     <artifactId>WPGUI</artifactId>
                     <!-- Update this to the version of WorldPainter you wish to test with: -->
-                    <version>2.21.1</version>
+                    <version>2.22.1</version>
                     <scope>compile</scope>
                 </dependency>
             </dependencies>
