--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,11 @@
             <version>2.22.2-SNAPSHOT</version>
         </dependency>
         <dependency>
+            <groupId>org.pepsoft.worldpainter</groupId>
+            <artifactId>WPDynmapPreviewer</artifactId>
+            <version>2.22.2-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
             <version>5.9.1</version>
