--- a/pom.xml
+++ b/pom.xml
@@ -70,15 +70,23 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.15.0</version>  <!-- Use the latest version -->
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.pepsoft.worldpainter/WPCore -->
         <dependency>
             <groupId>org.pepsoft.worldpainter</groupId>
             <artifactId>WPCore</artifactId>
-            <version>2.22.2-SNAPSHOT</version>
+            <version>2.23.2</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.pepsoft.worldpainter/WPDynmapPreviewer -->
         <dependency>
             <groupId>org.pepsoft.worldpainter</groupId>
             <artifactId>WPDynmapPreviewer</artifactId>
-            <version>2.22.2-SNAPSHOT</version>
+            <version>2.23.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.pepsoft.worldpainter</groupId>
+            <artifactId>WPGUI</artifactId>
+            <version>2.23.2</version>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
@@ -95,12 +103,11 @@
             <id>testWithWorldPainter</id>
             <dependencies>
 
-
+                <!-- https://mvnrepository.com/artifact/org.pepsoft.worldpainter/WPGUI -->
                 <dependency>
                     <groupId>org.pepsoft.worldpainter</groupId>
                     <artifactId>WPGUI</artifactId>
-                    <!-- Update this to the version of WorldPainter you wish to test with: -->
-                    <version>2.22.1</version>
+                    <version>2.23.2</version>
                     <scope>compile</scope>
                 </dependency>
             </dependencies>
