trigger workflow on wp-build tag push

--- a/.github/workflows/on-release-created.yml
+++ b/.github/workflows/on-release-created.yml
@@ -3,8 +3,10 @@ name: Zip and Upload on Release
 # will rename release to MacroMachine vx.x.x
 on:
   release:
-    types: [created]
-
+    types: [created, published]
+  push:
+    tags:
+      - 'wp-build-*'
 permissions:
   contents: write
 
