--- a/.github/workflows/merge-release.yml
+++ b/.github/workflows/merge-release.yml
@@ -21,26 +21,29 @@ jobs:
       - name: Check for pom.xml changes
         id: check-pom
         run: |
-          if git diff --name-only HEAD^ HEAD | grep -q 'pom.xml'; then
-            echo "pom.xml has changed."
-            VERSION=$(grep -oP '<version>\K.*?(?=</version>)' pom.xml | head -1)
-            echo "Current version is $VERSION"
-            echo "version_changed=true" >> $GITHUB_OUTPUT
-            echo "current_version=$VERSION" >> $GITHUB_OUTPUT
+          CURR_VERSION=$(mvn help:evaluate -Dexpression="project.version" -q -DforceStdout)
+          git checkout HEAD~1 -- pom.xml
+          PREV_VERSION=$(mvn help:evaluate -Dexpression="project.version" -q -DforceStdout)
+          git reset .
+          git restore .
+          
+          if [ "$PREV_VERSION" != "$CURR_VERSION" ]; then
+            echo "pom.xml version has changed: $PREV_VERSION → $CURR_VERSION"
+            echo "current_version=$CURR_VERSION" >> $GITHUB_OUTPUT
           else
-            echo "pom.xml has not changed."
+            echo "project version has not changed. Nothing to do."
             echo "version_changed=false" >> $GITHUB_OUTPUT
+            exit 0  # exit gracefully, nothing to do
           fi
 
       - name: Merge master into release
-        if: steps.check-pom.outputs.version_changed == 'true'
         run: |
           git config --global user.name 'GitHub Action'
           git config --global user.email 'action@github.com'
           git checkout release
-          git merge master --no-ff -m "release macroMachine version: ${{ steps.check-pom.outputs.current_version }}"
+          git merge master --no-ff -m "release MacroMachine v${{ steps.check-pom.outputs.current_version }}"
           git push origin release
           
           git checkout master
-          git tag macroMachine-release-${{ steps.check-pom.outputs.current_version }}
+          git tag release-${{ steps.check-pom.outputs.current_version }}
           git push --tag
