--- a/.github/workflows/merge-release.yml
+++ b/.github/workflows/merge-release.yml
@@ -30,13 +30,14 @@ jobs:
           if [ "$PREV_VERSION" != "$CURR_VERSION" ]; then
             echo "pom.xml version has changed: $PREV_VERSION → $CURR_VERSION"
             echo "current_version=$CURR_VERSION" >> $GITHUB_OUTPUT
+            echo "version_changed=true" >> $GITHUB_OUTPUT
           else
             echo "project version has not changed. Nothing to do."
             echo "version_changed=false" >> $GITHUB_OUTPUT
-            exit 0  # exit gracefully, nothing to do
           fi
 
       - name: Merge master into release
+        if: steps.check-pom.outputs.version_changed == 'true'
         run: |
           git config --global user.name 'GitHub Action'
           git config --global user.email 'action@github.com'
