--- a/.github/workflows/merge-release.yml
+++ b/.github/workflows/merge-release.yml
@@ -2,51 +2,57 @@ name: Check pom.xml version and merge
 
 on:
   workflow_run:
-    workflows: ["Maven Test"]   # must match the name above
-    branches: ["master"]        # only when Maven Test ran on master
+    workflows: ["Maven Test"]
+    branches: ["master"]
     types:
       - completed
 
 jobs:
-  check-and-merge:
+  check-version:
     runs-on: ubuntu-latest
-
-    permissions:
-      contents: write  # Grant write permissions to the contents
-
+    outputs:
+      version_changed: ${{ steps.check.outputs.version_changed }}
+      current_version: ${{ steps.check.outputs.current_version }}
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
         with:
-          fetch-depth: 0  # Fetch all history for all branches and tags
+          fetch-depth: 0
 
       - name: Check for pom.xml changes
-        id: check-pom
+        id: check
         run: |
           CURR_VERSION=$(mvn help:evaluate -Dexpression="project.version" -q -DforceStdout)
           git checkout HEAD~1 -- pom.xml
           PREV_VERSION=$(mvn help:evaluate -Dexpression="project.version" -q -DforceStdout)
           git reset .
           git restore .
-          
+
           if [ "$PREV_VERSION" != "$CURR_VERSION" ]; then
-            echo "pom.xml version has changed: $PREV_VERSION → $CURR_VERSION"
-            echo "current_version=$CURR_VERSION" >> $GITHUB_OUTPUT
             echo "version_changed=true" >> $GITHUB_OUTPUT
+            echo "current_version=$CURR_VERSION" >> $GITHUB_OUTPUT
           else
-            echo "project version has not changed. Nothing to do."
             echo "version_changed=false" >> $GITHUB_OUTPUT
           fi
 
+  merge-release:
+    needs: check-version
+    if: needs.check-version.outputs.version_changed == 'true'
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+
       - name: Merge master into release
-        if: steps.check-pom.outputs.version_changed == 'true'
         run: |
           git config --global user.name 'GitHub Action'
           git config --global user.email 'action@github.com'
           git checkout release
-          git merge master --no-ff -m "release MacroMachine v${{ steps.check-pom.outputs.current_version }}"
+          git merge master --no-ff -m "release MacroMachine v${{ needs.check-version.outputs.current_version }}"
           git push origin release
           
           git checkout master
-          git tag release-${{ steps.check-pom.outputs.current_version }}
+          git tag release-${{ needs.check-version.outputs.current_version }}
           git push --tag
