--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,11 @@
             <version>5.9.1</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.pepsoft.worldpainter</groupId>
+            <artifactId>WPGUI</artifactId>
+            <version>2.26.0</version>
+        </dependency>
     </dependencies>
 
     <profiles>
