--- a/.github/workflows/merge-release.yml
+++ b/.github/workflows/merge-release.yml
@@ -50,7 +50,7 @@ jobs:
           git config --global user.name 'GitHub Action'
           git config --global user.email 'action@github.com'
           git checkout release
-          git merge master --no-ff -m "release MacroMachine v${{ needs.check-version.outputs.current_version }}"
+          git merge master --squash -m "release MacroMachine v${{ needs.check-version.outputs.current_version }}" -X theirs
           git push origin release
           
           git checkout master
